--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,12 @@
     }
   },
   "rules": {
+    "no-param-reassign": ["error", {
+      "props": true,
+      "ignorePropertyModificationsFor": [
+        "state"
+      ]
+    }],
     "no-console": "warn",
     "no-eval": "error",
     "react/react-in-jsx-scope": "off",
