--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,13 @@
     }
   },
   "rules": {
+    "react/prop-types": "off",
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "function-declaration"
+      }
+    ],
     "no-param-reassign": ["error", {
       "props": true,
       "ignorePropertyModificationsFor": [
