--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     }
   },
   "rules": {
+    "react/prop-types": "off",
     "no-param-reassign": ["error", {
       "props": true,
       "ignorePropertyModificationsFor": [
