--- a/.eslintrc
+++ b/.eslintrc
@@ -82,7 +82,8 @@
         "trailingComma": "es5",
         "semi": true,
         "no-mixed-spaces-and-tabs": ["error", "smart-tabs"],
-        "no-unused-vars": ["error"]
+        "no-unused-vars": ["error"],
+        "endOfLine": "auto"
       }
     ]
   }
