--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
@@ -18,6 +19,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.72.0",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -27,8 +30,10 @@
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint --fix .  --ext .js,.jsx,.ts,.tsx",
-    "stylelint:check": "stylelint \"src/**/*.css\"",
-    "lint-check-all": "npm run lint && npm run stylelint:check"
+    "stylelint": "stylelint \"src/**/*.css\"",
+    "stylelint:fix": "stylelint --fix \"src/**/*.css\"",
+    "lint-fix-all": "npm run lint:fix && npm run stylelint:fix",
+    "lint-check-all": "npm run lint && npm run stylelint"
   },
   "browserslist": {
     "production": [
