--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,3 +7,7 @@ services:
     build:
       context: .
       target: production
+    volumes:
+      - './src:/app/src'
+    ports:
+      - 3000:3000
