--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
