--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
+    "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
