--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.2",
     "react-currency-input-field": "^3.8.0",
     "react-dom": "^18.2.0",
+    "react-phone-number-input": "^3.3.12",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
